--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -23,6 +23,8 @@ foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
   set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/${PROJECT_LIB_DIR})
 endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
 
+option(BUILD_ENABLE_CONSOLE "Builds a console application (Windows only)" ON)
+
 # find Qt5
 set(QT5_ROOT_DIRECTORY "NOTFOUND" CACHE STRING "Qt5 root directory")
 if (EXISTS ${QT5_ROOT_DIRECTORY})
