--- a/trunk/OnePercent/CMakeLists.txt
+++ b/trunk/OnePercent/CMakeLists.txt
@@ -8,6 +8,7 @@ set(PROJECT_NAME OnePercent)
 add_source_directory(ONE_PERCENT_SOURCE core)
 add_source_directory(ONE_PERCENT_SOURCE data)
 add_source_directory(ONE_PERCENT_SOURCE nodes)
+add_source_directory(ONE_PERCENT_SOURCE scripting)
 add_source_directory(ONE_PERCENT_SOURCE simulation)
 add_source_directory(ONE_PERCENT_SOURCE states)
 add_source_directory(ONE_PERCENT_SOURCE widgets)
