--- a/luadocTest/CMakeLists.txt
+++ b/luadocTest/CMakeLists.txt
@@ -12,6 +12,7 @@ include_directories(
   ${LUADOC_INCLUDE_DIR}
   ${GTEST_INCLUDE_DIRS}
   ${LUA_INCLUDE_PREFIX}/include
+  ${LUA_INCLUDE_DIR}
   ${LUABRIDGE_INCLUDE_DIR}
   ${OSGGAMING_INCLUDE_DIR})
 
