--- a/VectorizerLibTest/CMakeLists.txt
+++ b/VectorizerLibTest/CMakeLists.txt
@@ -10,10 +10,10 @@ set(VTEST_OSG_LIBRARIES_TMP "osg osgUtil osgText OpenThreads")
 get_libraries(VTEST_OSG_LIBRARIES ${OSG_LIBRARY} "" ${VTEST_OSG_LIBRARIES_TMP})
 get_libraries(VTEST_OSG_LIBRARIES_DEBUG ${OSG_LIBRARY_DEBUG} ${OSG_LIBRARY_SUFFIX} ${VTEST_OSG_LIBRARIES_TMP})
 
-set(VTEST_OPENCV_LIBRARIES_TMP "opencv_core300 opencv_highgui300 opencv_imgcodecs300 opencv_imgproc300")
+set(VTEST_OPENCV_LIBRARIES_TMP "opencv_core opencv_highgui opencv_imgcodecs opencv_imgproc")
 
-get_libraries(VTEST_OPENCV_LIBRARIES ${OPENCV_LIB_DIR_OPT} "" ${VTEST_OPENCV_LIBRARIES_TMP})
-get_libraries(VTEST_OPENCV_LIBRARIES_DEBUG ${OPENCV_LIB_DIR_DBG} ${OPENCV_LIBRARY_SUFFIX} ${VTEST_OPENCV_LIBRARIES_TMP})
+get_libraries(VTEST_OPENCV_LIBRARIES ${OPENCV_LIB_DIR_OPT} "${OPENCV_VERSION_SUFFIX}" ${VTEST_OPENCV_LIBRARIES_TMP})
+get_libraries(VTEST_OPENCV_LIBRARIES_DEBUG ${OPENCV_LIB_DIR_DBG} "${OPENCV_VERSION_SUFFIX}${OPENCV_LIBRARY_SUFFIX}" ${VTEST_OPENCV_LIBRARIES_TMP})
 
 
 include_directories(
