added chicken placeholder model; implemented model bins in CountryPresenter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -252,7 +252,7 @@ if (WIN32)
     
     if (EXISTS ${OSG_PLUGINS})
       copy_dlls(${OSG_PLUGINS} ${CMAKE_BINARY_DIR}/${PROJECT_BIN_DIR} "osgdb_" ""
-        "freetype png")
+        "freetype png 3ds")
     endif()
     
     if (OSG_LIBRARIES_DEBUG_SUFFIX AND EXISTS ${OSG_BINARY_DEBUG})
@@ -263,7 +263,7 @@ if (WIN32)
       
       if (EXISTS ${OSG_PLUGINS_DEBUG})
         copy_dlls(${OSG_PLUGINS_DEBUG} ${CMAKE_BINARY_DIR}/${PROJECT_BIN_DIR} "osgdb_" ${OSG_LIBRARY_SUFFIX}
-          "freetype png")
+          "freetype png 3ds")
       endif()
     endif()
   endif()
