moved code from osgGaming to osgHelper; implemented scene- and screen render stages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,6 +218,7 @@ endif()
 
 # add subdirectories
 add_subdirectory(osgGaming)
+add_subdirectory(osgHelper)
 add_subdirectory(QtOsgBridge)
 add_subdirectory(QtOsgBridgeApplication)
 
