--- a/luadoc/CMakeLists.txt
+++ b/luadoc/CMakeLists.txt
@@ -23,7 +23,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
   ${LUA_INCLUDE_DIR}
   ${LUABRIDGE_INCLUDE_DIR}
   ${Qt5Core_INCLUDE_DIRS}
-  ${OSGGAMING_INCLUDE_DIR})
+  ${OSGHELPER_INCLUDE_DIR})
 
 set(CMAKE_AUTORCC OFF)
 
