--- a/luadoc/CMakeLists.txt
+++ b/luadoc/CMakeLists.txt
@@ -22,7 +22,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
   ${LUA_INCLUDE_PREFIX}/include
   ${LUA_INCLUDE_DIR}
   ${LUABRIDGE_INCLUDE_DIR}
-  ${Qt5Core_INCLUDE_DIRS}
+  ${Qt${QT_VERSION}Core_INCLUDE_DIRS}
   ${OSGHELPER_INCLUDE_DIR})
 
 set(CMAKE_AUTORCC OFF)
